--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,7 +14,7 @@
             {{ form_row(login_form.Login, {'attr': {'class': 'btn btn-success btn-block btn-lg gradient-custom-4 text-body' }}) }}
         </div>
         {% if error %}
-            {{  error }}
+            {{  error.message }}
             <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
         <input type="hidden" name="_csrf_token"
