--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -21,11 +21,11 @@ h2 {
 }
 
 .product-container {
-  padding: 1rem 4.9rem 0 4.9rem;
-  margin-top: 0.5rem;
+  padding-top: 0.5rem;
   display: flex;
-  justify-content: space-between;
+  gap: 3vw;
   align-items: center;
+  justify-content: center;
   border-radius: 0.25rem;
   box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
 
@@ -39,7 +39,7 @@ h2 {
   > div:nth-child(8),
   > div:last-child {
     margin-top: 0;
-    margin-bottom: 1.6rem;
+    margin-bottom: 2.2rem;
   }
 
   > div:nth-child(5),
@@ -90,9 +90,14 @@ h2 {
 }
 
 .form__user_and_client_data_container {
-  width: 100%;
+  width: 90%;
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+}
+
+.user_client_container {
+  display: flex;
+  gap: 20vw;
 }
 
 .user_and_client_data_container__user_container {
@@ -107,9 +112,7 @@ h2 {
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: center;
   text-align: center;
-  margin-top: 0.5rem;
 }
 
 .user_data__user_inputs {
@@ -156,19 +159,17 @@ h2 {
 .dates_container__dates_inputs {
   display: flex;
   text-align: center;
-  margin-top: 0.5rem;
-  margin-left: 0.5rem;
+  padding-top: 0.5rem;
   justify-content: center;
   align-items: center;
   border-radius: 0.25rem;
+  gap: 2rem;
   box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
 }
 
 .dates_inputs__input_containers {
   display: flex;
-  margin-top: 0.3rem;
   flex-direction: column;
-  margin-left: 1rem;
 }
 
 .form__products_list {
@@ -182,10 +183,10 @@ h2 {
 .products_list__header_button {
   width: 100%;
   display: flex;
-  margin-right: 8rem;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
-  justify-content: flex-end;
+  justify-content: center;
+  position: relative;
 }
 
 .header_select__header_container {
@@ -196,9 +197,10 @@ h2 {
 }
 
 .header_button__button_container {
-  width: 50%;
-  display: flex;
-  justify-content: flex-end;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0;
 }
 
 #add-product-button {
@@ -223,21 +225,23 @@ h2 {
   align-items: center;
   flex-direction: column;
   height: 90vh;
-  > form{
+
+  > form {
     box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
     width: 25%;
-    padding: 4rem;
+    padding: 2rem;
   }
 }
 
-.table{
+.table {
   width: 75%;
   box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
 }
 
-.table-container{
+.table-container {
   height: 30vh;
 }
+
 $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 @import '~@fortawesome/fontawesome-free/scss/solid';
