--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -2,20 +2,23 @@
     <div class="container-fluid">
         <a class="navbar-brand">Invoice Generator</a>
         <div class="navbar-collapse" id="navbarNav">
+            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('invoice/show') }}">Invoices</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('show_clients') }}">Clients</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('user_settings') }}">User</a>
+                    </li>
+
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Invoices</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Clients</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">User</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Logout</a>
+                    <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
                 </li>
             </ul>
+            {% endif %}
         </div>
     </div>
 </nav>
