--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -2,8 +2,8 @@
     <div class="container-fluid">
         <a class="navbar-brand">Invoice Generator</a>
         <div class="navbar-collapse" id="navbarNav">
-            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('invoice/show') }}">Invoices</a>
                     </li>
@@ -13,11 +13,17 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('user_settings') }}">User</a>
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+                    </li>
+                </ul>
+            {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+                    <a class="nav-link" href="{{ path('app_login') }}">Login</a>
                 </li>
-            </ul>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_register') }}">Register</a>
+                </li>
             {% endif %}
         </div>
     </div>
