--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,6 +3,11 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
+    {% for message in app.flashes('success') %}
+        <div class="alert alert-success text-center">
+            {{ message }}
+        </div>
+    {% endfor %}
     <div class="single-form-container">
         <h1>Please sign in.</h1>
         {{ form_start(login_form, {form_enctype: login_form}) }}
