--- a/templates/Clients/show.html.twig
+++ b/templates/Clients/show.html.twig
@@ -12,39 +12,43 @@
             {{ message }}
         </div>
     {% endfor %}
-    <div class="pt-4 d-flex justify-content-center align-items-center table-container">
-        {% if clientsData is defined%}
-    <table class="table">
-        <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">NIP</th>
-            <th scope="col">Company Name</th>
-            <th scope="col">Street</th>
-            <th scope="col">Zip Code</th>
-            <th scope="col">City</th>
-            <th scope="col">Email</th>
-            <th scope="col">Edit</th>
-            <th scope="col">Delete</th>
-        </tr>
-    <tbody>
-        {% for clientData in clientsData %}
-        <tr>
-            <th scope="row"> {{ loop.index }} </th>
-            <td> {{ clientData.NIP }}  </td>
-            <td> {{ clientData.COMPANY_NAME }} </td>
-            <td> {{ clientData.STREET }} </td>
-            <td> {{ clientData.ZIP_CODE }} </td>
-            <td> {{ clientData.CITY }} </td>
-            <td> {{ clientData.EMAIL }} </td>
-            <td> <a href="{{ path('update_client', {'id': clientData.ID}) }}">Edit</a></td>
-            <td> <a href="{{ path('delete_client', {'id': clientData.ID}) }}">Delete</a></td>
-        </tr>
-    {% endfor %}
+    {% if clientsData is defined %}
+        <div class="pt-4 d-flex align-items-center flex-column">
+        <div class="d-flex justify-content-end w-75 justify-content-end btn-add">
+            <a class='btn btn-primary' href="{{ path('create_client') }}"> add client</a>
+        </div>
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">NIP</th>
+                <th scope="col">Company Name</th>
+                <th scope="col">Street</th>
+                <th scope="col">Zip Code</th>
+                <th scope="col">City</th>
+                <th scope="col">Email</th>
+                <th scope="col">Edit</th>
+                <th scope="col">Delete</th>
+            </tr>
+            <tbody>
+            {% for clientData in clientsData %}
+                <tr>
+                    <th scope="row"> {{ loop.index }} </th>
+                    <td> {{ clientData.NIP }}  </td>
+                    <td> {{ clientData.COMPANY_NAME }} </td>
+                    <td> {{ clientData.STREET }} </td>
+                    <td> {{ clientData.ZIP_CODE }} </td>
+                    <td> {{ clientData.CITY }} </td>
+                    <td> {{ clientData.EMAIL }} </td>
+                    <td><a href="{{ path('update_client', {'id': clientData.ID}) }}">Edit</a></td>
+                    <td><a href="{{ path('delete_client', {'id': clientData.ID}) }}">Delete</a></td>
+                </tr>
+            {% endfor %}
         </table>
-        {% elseif msgEmptyList is defined%}
+    {% elseif msgEmptyList is defined %}
+        <div class="pt-4 d-flex justify-content-center align-items-center table-container">
         {{ msgEmptyList|replace({" ": "&nbsp;"})|raw|nl2br }}  <a href="{{ msgLink }}"> here.</a>
-        {% endif %}
+    {% endif %}
     </div>
 
 {% endblock %}
