--- a/templates/Products/show.html.twig
+++ b/templates/Products/show.html.twig
@@ -12,33 +12,37 @@
             {{ message }}
         </div>
     {% endfor %}
-    <div class="pt-4 d-flex justify-content-center align-items-center">
-        {% if productsData is defined%}
-            <table class="table w-50">
-                <thead>
+    {% if productsData is defined %}
+        <div class="pt-4 d-flex align-items-center flex-column">
+        <div class="d-flex justify-content-end w-75 justify-content-end btn-add">
+            <a class='btn btn-primary' href="{{ path('create_product') }}"> add product</a>
+        </div>
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Name</th>
+                <th scope="col">Price</th>
+                <th scope="col">Tax Rate</th>
+                <th scope="col">Edit</th>
+                <th scope="col">Delete</th>
+            </tr>
+            <tbody>
+            {% for productData in productsData %}
                 <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Price</th>
-                    <th scope="col">Tax Rate</th>
-                    <th scope="col">Edit</th>
-                    <th scope="col">Delete</th>
+                    <th scope="row"> {{ loop.index }} </th>
+                    <td> {{ productData.NAME }}  </td>
+                    <td> {{ productData.NET_PRICE }} </td>
+                    <td> {{ productData.TAX_RATE }} </td>
+                    <td><a href="{{ path('update_product', {'id': productData.ID}) }}">Edit</a></td>
+                    <td><a href="{{ path('delete_product', {'id': productData.ID}) }}">Delete</a></td>
                 </tr>
-                <tbody>
-                {% for productData in productsData %}
-                    <tr>
-                        <th scope="row"> {{ loop.index }} </th>
-                        <td> {{ productData.NAME }}  </td>
-                        <td> {{ productData.NET_PRICE }} </td>
-                        <td> {{ productData.TAX_RATE }} </td>
-                        <td> <a href="{{ path('update_product', {'id': productData.ID}) }}">Edit</a></td>
-                        <td> <a href="{{ path('delete_product', {'id': productData.ID}) }}">Delete</a></td>
-                    </tr>
-                {% endfor %}
-            </table>
-        {% elseif msgEmptyList is defined%}
-            {{ msgEmptyList|replace({" ": "&nbsp;"})|raw|nl2br }}  <a href="{{ msgLink }}"> here.</a>
-        {% endif %}
-    </div>
+            {% endfor %}
+        </table>
+        {% elseif msgEmptyList is defined %}
+        <div class="pt-4 d-flex justify-content-center align-items-center table-container">
+            {{ msgEmptyList|replace({" ": "&nbsp;"})|raw|nl2br }} <a href="{{ msgLink }}"> here.</a>
+            {% endif %}
+        </div>
 
 {% endblock %}
