--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -11,6 +11,9 @@
                         <a class="nav-link" href="{{ path('show_clients') }}">Clients</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ path('show_products') }}">Products</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ path('user_settings') }}">User</a>
                     </li>
                     <li class="nav-item">
