--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -21,7 +21,7 @@ h2 {
 }
 
 .product-container {
-  padding-top: 0.5rem;
+  padding: 0.5rem 0.5 rem 0;
   display: flex;
   gap: 1vw;
   align-items: center;
