--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -8,7 +8,7 @@
                         <a class="nav-link" href="{{ path('invoice/show') }}">Invoices</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('show_clients') }}">Clients</a>
+                        <a class="nav-link" href="{{ path('clients/show') }}">Clients</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('show_products') }}">Products</a>
