--- a/templates/Invoice/generate.html.twig
+++ b/templates/Invoice/generate.html.twig
@@ -176,7 +176,7 @@
             </div>
         </div>
         <div  class="form__submit_container">
-            {{ form_widget(invoice_form.submit, {'attr': {'value':'generate'}}) }}
+            {{ form_widget(invoice_form.Generate, {'attr': {'class':'btn btn-success btn-block btn-lg gradient-custom-4 text-body'}}) }}
         </div>
     </div>
     {{ form_end(invoice_form) }}
