--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -34,7 +34,6 @@ h2 {
     margin-top: 0.5rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
   }
 
   > div:nth-child(8),
@@ -112,6 +111,9 @@ h2 {
   flex-direction: column;
   border-radius: 0.25rem;
   box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
+  @media (max-width: 1000px) {
+    margin-bottom: 1rem;
+  }
 }
 
 .user_container__user_data, .user_container__client_data {
@@ -231,11 +233,17 @@ h2 {
   align-items: center;
   flex-direction: column;
   height: 90vh;
+  @media (max-width: 1000px) {
+    height: 60vh;
+  }
 
   > form {
     box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
     width: 25%;
     padding: 2rem;
+    @media (max-width: 1000px) {
+      width: 75%;
+    }
   }
 }
 
