add error msgs for clients pages

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -264,6 +264,11 @@ h2 {
   text-align: left;
 }
 
+.error-msg {
+  display: none;
+  color:red;
+}
+
 $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 @import '~@fortawesome/fontawesome-free/scss/solid';
