--- a/templates/Clients/edit.html.twig
+++ b/templates/Clients/edit.html.twig
@@ -7,11 +7,11 @@
 
     <div class="single-form-container">
         <h2 class="text-uppercase text-center mb-5">Edit Client</h2>
-
         {{ form_start(clients_form, {'method': 'POST'}) }}
         <div class="form-outline mb-4">
             {{ form_widget(clients_form.NIP, {'id': 'NIP','attr': {'class': 'form-control form-control-lg'}}) }}
             {{ form_label(clients_form.NIP,null, {'label': ' Client Nip', 'label_attr': {'class': 'form-label'}}) }}
+            <div class="error-msg" id="nip-error">Nip must have exactly 10 numbers</div>
             {% if errors.nip is defined %}
                 <div style="color: red">{{ errors.nip }}</div>
             {% endif %}
@@ -20,6 +20,7 @@
         <div class="form-outline mb-4">
             {{ form_widget(clients_form.COMPANY_NAME, {'id': 'NAME','attr': {'class': 'form-control form-control-lg'}}) }}
             {{ form_label(clients_form.COMPANY_NAME,null, {'label': 'Company Name', 'label_attr': {'class': 'form-label'}}) }}
+            <div class="error-msg" id="name-error">These field cannot be empty.</div>
             {% if errors.companyName is defined %}
                 <div style="color: red">{{ errors.companyName }}</div>
             {% endif %}
@@ -27,7 +28,8 @@
 
         <div class="form-outline mb-4">
             {{ form_widget(clients_form.STREET, {'id': 'STREET','attr': {'class': 'form-control form-control-lg'}}) }}
-            {{ form_label(clients_form.STREET,null, {'label': 'STREET', 'label_attr': {'class': 'form-label'}}) }}
+            {{ form_label(clients_form.STREET,null, {'label': 'Street', 'label_attr': {'class': 'form-label'}}) }}
+            <div class="error-msg" id="street-error">These field cannot be empty.</div>
             {% if errors.street is defined %}
                 <div style="color: red">{{ errors.street }}</div>
             {% endif %}
@@ -35,7 +37,8 @@
 
         <div class="form-outline mb-4">
             {{ form_widget(clients_form.ZIP_CODE, {'id': 'ZIP','attr': {'class': 'form-control form-control-lg'}}) }}
-            {{ form_label(clients_form.ZIP_CODE,null, {'label': 'ZIP CODE', 'label_attr': {'class': 'form-label'}}) }}
+            {{ form_label(clients_form.ZIP_CODE,null, {'label': 'Zip code', 'label_attr': {'class': 'form-label'}}) }}
+            <div class="error-msg" id="zip-code-error">These field must match pattern 00-000.</div>
             {% if errors.zipCode is defined %}
                 <div style="color: red">{{ errors.zipCode }}</div>
             {% endif %}
@@ -44,6 +47,7 @@
         <div class="form-outline mb-4">
             {{ form_widget(clients_form.CITY, {'id': 'CITY','attr': {'class': 'form-control form-control-lg'}}) }}
             {{ form_label(clients_form.CITY,null, {'label': 'CITY', 'label_attr': {'class': 'form-label'}}) }}
+            <div class="error-msg" id="city-error">These field cannot be empty.</div>
             {% if errors.city is defined %}
                 <div style="color: red">{{ errors.city }}</div>
             {% endif %}
@@ -52,6 +56,7 @@
         <div class="form-outline mb-4">
             {{ form_widget(clients_form.EMAIL, {'id': 'EMAIL','attr': {'class': 'form-control form-control-lg'}}) }}
             {{ form_label(clients_form.EMAIL,null, {'label': 'EMAIL', 'label_attr': {'class': 'form-label'}}) }}
+            <div class="error-msg" id="email-error">These field cannot be empty.</div>
             {% if errors.email is defined %}
                 <div style="color: red">{{ errors.email }}</div>
             {% endif %}
