--- a/templates/Products/create.html.twig
+++ b/templates/Products/create.html.twig
@@ -12,6 +12,7 @@
         <div class="form-outline mb-4">
             {{ form_widget(products_form.NAME, {'id': 'NAME','attr': {'class': 'form-control form-control-lg'}}) }}
             {{ form_label(products_form.NAME,null, {'label': 'Name', 'label_attr': {'class': 'form-label'}}) }}
+            <div class="error-msg" id="name-error">These field cannot be empty.</div>
             {% if errors.name is defined %}
                 <div style="color: red">{{ errors.name }}</div>
             {% endif %}
@@ -20,6 +21,7 @@
         <div class="form-outline mb-4">
             {{ form_widget(products_form.NET_PRICE, {'id': 'NET_PRICE', 'attr': {'class': 'form-control form-control-lg'}}) }}
             {{ form_label(products_form.NET_PRICE,null, {'label': 'Price', 'label_attr': {'class': 'form-label'}}) }}
+            <div class="error-msg" id="tax-error">These field cannot be empty.</div>
             {% if errors.price is defined %}
                 <div style="color: red">{{ errors.price }}</div>
             {% endif %}
@@ -27,6 +29,7 @@
         <div class="form-outline mb-4">
             {{ form_widget(products_form.TAX_RATE, {'id': 'TAX_RATE','attr': {'class': 'form-control form-control-lg'}}) }}
             {{ form_label(products_form.TAX_RATE,null, {'label': 'Tax rate', 'label_attr': {'class': 'form-label'}}) }}
+            <div class="error-msg" id="price-error">These field cannot be empty.</div>
             {% if errors.taxRate is defined %}
                 <div style="color: red">{{ errors.taxRate }}</div>
             {% endif %}
