--- a/templates/Clients/show.html.twig
+++ b/templates/Clients/show.html.twig
@@ -15,7 +15,7 @@
     {% if clientsData is defined %}
         <div class="pt-4 d-flex align-items-center flex-column">
         <div class="d-flex justify-content-end w-75 justify-content-end btn-add">
-            <a class='btn btn-primary' href="{{ path('create_client') }}"> add client</a>
+            <a class='btn btn-primary' href="{{ path('create_client') }}"> Add client</a>
         </div>
         <table class="table ">
             <thead>
