--- a/templates/Invoice/show.html.twig
+++ b/templates/Invoice/show.html.twig
@@ -15,7 +15,7 @@
     {% if invoicesData is defined %}
         <div class="pt-4 d-flex align-items-center flex-column">
         <div class="d-flex justify-content-end w-75 justify-content-end btn-add">
-            <a class='btn btn-primary' href="{{ path('invoice_create') }}"> add invoice</a>
+            <a class='btn btn-primary' href="{{ path('invoice_create') }}"> Add invoice</a>
         </div>
         <table class="table">
             <thead>
