--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,7 +9,7 @@
         </div>
     {% endfor %}
     <div class="single-form-container">
-        <h1>Please sign in.</h1>
+        <h1>Login</h1>
         {{ form_start(login_form, {form_enctype: login_form}) }}
         {{ form_row(login_form.Username) }}
         {{ form_row(login_form.Password, {
